--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Home - Dentistry Topics{% endblock %}
 
 {% block content %}
-<div class="jumbotron">
+<div class="jumbotron bg-light p-5 rounded-lg mb-4">
     <h1 class="display-4">Welcome to Dentistry Resource Center</h1>
     <p class="lead">Explore various dentistry topics and expand your knowledge.</p>
     <hr class="my-4">
@@ -18,12 +18,12 @@
 {% if topics %}
 <div class="row">
     {% for topic in topics %}
-    <div class="col-md-4">
-        <div class="card topic-card">
-            <div class="card-body">
+    <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
+        <div class="card h-100 topic-card">
+            <div class="card-body d-flex flex-column">
                 <h5 class="card-title">{{ topic }}</h5>
-                <p class="card-text">Explore questions and resources related to {{ topic }}.</p>
-                <a href="#" class="btn btn-outline-primary">View Topic</a>
+                <p class="card-text flex-grow-1"><!-- Placeholder for potential description --></p>
+                <a href="#" class="btn btn-primary mt-auto">View Details</a>
             </div>
         </div>
     </div>
