--- a/templates/signin.html
+++ b/templates/signin.html
@@ -21,9 +21,20 @@
 
     <div class="mt-4 text-center">
         <p>Or sign in with</p>
-        <a href="{{ url_for('signin_google') }}" class="btn btn-outline-secondary">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google"
-                style="height: 18px; margin-right: 8px;">
+        <a href="{{ url_for('signin_google') }}" class="btn btn-outline-secondary d-inline-flex align-items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
+                style="margin-right: 8px;">
+                <g>
+                    <path fill="#4285F4"
+                        d="M17.64 9.2045c0-.6382-.0582-1.2523-.1636-1.8414H9v3.4818h4.8436c-.2086 1.1255-.8427 2.0782-1.7959 2.7164v2.2581h2.9087c1.7018-1.5668 2.6836-3.8736 2.6836-6.6149z" />
+                    <path fill="#34A853"
+                        d="M9 18c2.43 0 4.4673-.8059 5.9564-2.1805l-2.9087-2.2581c-.8059.5401-1.8368.8591-3.0477.8591-2.3441 0-4.3282-1.5832-5.036-3.7105H.9573v2.3318C2.4382 15.9832 5.4818 18 9 18z" />
+                    <path fill="#FBBC05"
+                        d="M3.9641 10.71c-.18-.54-.2823-1.1173-.2823-1.7082s.1023-1.1682.2823-1.7082V4.9582H.9573C.3477 6.15 0 7.5455 0 9c0 1.4545.3477 2.85.9573 4.0418l3.0068-2.3318z" />
+                    <path fill="#EA4335"
+                        d="M9 3.5795c1.3214 0 2.5077.4541 3.4405 1.3459l2.5813-2.5801C13.4632.8918 11.4259 0 9 0 5.4818 0 2.4382 2.0168.9573 4.9582l3.0068 2.3318C4.6718 5.1627 6.6559 3.5795 9 3.5795z" />
+                </g>
+            </svg>
             Google
         </a>
     </div>
