--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,7 +14,11 @@
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" name="password" required>
-            <div class="form-text">Use at least 8 characters with a mix of letters, numbers & symbols.</div>
+            <div class="form-text">Use at least 8 characters.</div>
+        </div>
+        <div class="mb-3">
+            <label for="confirm_password" class="form-label">Confirm Password</label>
+            <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
         </div>
         <div class="d-grid gap-2">
             <button type="submit" class="btn btn-primary">Sign Up</button>
